updated some styles and fixed overflow bug

--- a/styles.css
+++ b/styles.css
@@ -19,16 +19,18 @@ body {
   background: var(--neutral-white);
   color: var(--text-color1);
   font-family: "Space Mono", monospace;
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
 }
 
-.main-container {
+main {
   flex: 1;
 }
 
@@ -46,7 +48,7 @@ body {
 
 .main-content {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   align-items: left;
   flex-direction: column;
@@ -101,11 +103,8 @@ img {
   font-weight: 500;
   color: var(--grey-color3);
   height: 17px;
-  display: flex;
-  flex: 0 0 10%;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 20px;
+  text-align: center;
+  padding-bottom: 24px;
 }
 
 .footer a {
@@ -122,6 +121,11 @@ img {
 
 /*Media query for 1440 x 1080 display*/
 @media screen and (min-width: 1440px) {
+  body, html {
+    height: 100%;
+    overflow: hidden;
+  }
+
   .page-title {
     height: 25px;
     margin: 40px 70px;
@@ -155,6 +159,10 @@ img {
     font-size: 24px;
     width: 60%;
     height: 108px;
+  }
+
+  .footer {
+    padding-bottom: 36px;
   }
 
 }
